@@ -1430,9 +1430,9 @@ is.singleton <- function(x) {
 #' Single element numeric vectors are returned as a character vector with the
 #' number plus a suffix of \code{"px"}.
 #'
-#' Single element character vectors must be \code{"auto"} or \code{"inherit"},
-#' a number, or a length calculated by the \code{"calc"} CSS function.
-#' If the number has a suffix, it must be valid: \code{px},
+#' Single element character vectors must be \code{"auto"}, \code{"fit-content"}
+#' or \code{"inherit"}, a number, or a length calculated by the \code{"calc"}
+#' CSS function. If the number has a suffix, it must be valid: \code{px},
 #' \code{\%}, \code{ch}, \code{em}, \code{rem}, \code{pt}, \code{in}, \code{cm},
 #' \code{mm}, \code{ex}, \code{pc}, \code{vh}, \code{vw}, \code{vmin}, or
 #' \code{vmax}.
@@ -1462,7 +1462,7 @@ validateCssUnit <- function(x) {
     x <- as.numeric(x)
 
   pattern <-
-    "^(auto|inherit|calc\\(.*\\)|((\\.\\d+)|(\\d+(\\.\\d+)?))(%|in|cm|mm|ch|em|ex|rem|pt|pc|px|vh|vw|vmin|vmax))$"
+    "^(auto|inherit|fit-content|calc\\(.*\\)|((\\.\\d+)|(\\d+(\\.\\d+)?))(%|in|cm|mm|ch|em|ex|rem|pt|pc|px|vh|vw|vmin|vmax))$"
 
   if (is.character(x) &&
       !grepl(pattern, x)) {
