@@ -23,9 +23,9 @@ Checks that the argument is valid for use as a CSS unit of length.
 Single element numeric vectors are returned as a character vector with the
 number plus a suffix of \code{"px"}.
 
-Single element character vectors must be \code{"auto"} or \code{"inherit"},
-a number, or a length calculated by the \code{"calc"} CSS function.
-If the number has a suffix, it must be valid: \code{px},
+Single element character vectors must be \code{"auto"}, \code{"fit-content"}
+or \code{"inherit"}, a number, or a length calculated by the \code{"calc"}
+CSS function. If the number has a suffix, it must be valid: \code{px},
 \code{\%}, \code{ch}, \code{em}, \code{rem}, \code{pt}, \code{in}, \code{cm},
 \code{mm}, \code{ex}, \code{pc}, \code{vh}, \code{vw}, \code{vmin}, or
 \code{vmax}.
